# ocr-identity-rest-api

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  config.dev.env  config.example.env  config.prod.env  config.staging.env  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  extract_text_identity.py  main.py  pyproject.toml  pytest.ini  read_image_to_text.py  requirements.txt  run_migration.py  start-dev.sh  start-prod.sh  start-staging.sh  start.sh  test_people_crud.py  test_spacy_extraction.py  test_upload.py
.github/workflows/: README.md  ci-cd.yml  deploy.yml  docs.yml  release.yml  security.yml
app/api/: auth.py  database.py  logging.py  media.py  people.py  sentry.py
app/core/: celery_app.py  config.py  database.py  database_logging.py  database_router.py  database_session.py  email_client.py  jwt_utils.py  logging_config.py  multi_database_utils.py  redis_client.py  s3_client.py  sentry.py  sentry_middleware.py  sentry_utils.py  service_logging.py  ulid.py
app/core/middleware/: logging_middleware.py
app/models/: __init__.py  audit_log.py  base.py  identity_document.py  media.py  mediable.py  ocr_job.py  people.py  people_addresses.py  user.py
app/schemas/: media.py  people.py  people_addresses.py
app/services/: base_crud_service.py  ektp_image_generator.py  people_service.py  s3_service.py  spacy_extraction_service.py
app/tasks/: media_tasks.py  ocr_tasks.py
app/utils/: __init__.py  media_utils.py
docker/: README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  start-dev.sh
docs/: DOCKER_SETUP.md  MAKEFILE_QUICK_REFERENCE.md  MIGRATIONS.md  MIGRATION_TO_POETRY.md  MULTI_DATABASE.md  PEOPLE_CRUD.md  TESTING.md  ci-cd-workflow.mmd  erd.mmd
examples/: media_usage_example.py
init-scripts/: 01-init.sql  02-minio-setup.sh
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_add_media_tables.py  0003_create_people_table.py  0004_add_address_to_people.py  0005_create_settings_table.py
rules/: validation_file_size_type.py
scripts/: docker-hub-upload.sh  download_spacy_models.py  fix_spacy_installation.py  install_poetry.sh  migrate.py  migrate_docker.sh  run_tests.py  setup_logging.py  setup_minio.py  start_celery_worker.py  test_multi_database.py
tests/: conftest.py  test_database_operations.py  test_integration.py  test_media_models.py  test_media_utils.py
